--- a/index.css
+++ b/index.css
@@ -2,6 +2,6 @@ body{
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: white;
+    background-color: blue;
 
 }
